--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
   ],
   "plugins": [
     "babel-plugin-transform-flow-strip-types",
-    "transform-class-properties"
+    "transform-class-properties",
+    "transform-runtime"
   ]
 }
