--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.10",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
@@ -52,11 +53,13 @@
     "apollo-cache-inmemory": "^1.1.2",
     "apollo-client": "^2.1.0",
     "apollo-link-http": "^1.3.0",
+    "apollo-link-ws": "^1.0.2",
     "graphql": "^0.11.7",
     "graphql-tag": "^2.5.0",
     "react": "^15.6.2",
     "react-apollo": "^2.0.1",
-    "react-dom": "^15.6.2"
+    "react-dom": "^15.6.2",
+    "subscriptions-transport-ws": "^0.9.4"
   },
   "engines": {
     "node": ">= 6.0.0",
